set03/problem02_compile_errors.txt
Compilation started at 10/31/2023, 12:26:18 AM
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem02.c: In function 'main':
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem02.c:36:11: error: incompatible type for argument 1 of 'input'
     input(x1,y1,x2,y2,x3,y3);
           ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem02.c:11:6: note: expected 'float *' but argument is of type 'float'
 void input(float *x1,float*y1, float *x2, float*y2, float *x3, float *y3){
      ^~~~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem02.c:36:14: error: incompatible type for argument 2 of 'input'
     input(x1,y1,x2,y2,x3,y3);
              ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem02.c:11:6: note: expected 'float *' but argument is of type 'float'
 void input(float *x1,float*y1, float *x2, float*y2, float *x3, float *y3){
      ^~~~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem02.c:36:17: error: incompatible type for argument 3 of 'input'
     input(x1,y1,x2,y2,x3,y3);
                 ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem02.c:11:6: note: expected 'float *' but argument is of type 'float'
 void input(float *x1,float*y1, float *x2, float*y2, float *x3, float *y3){
      ^~~~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem02.c:36:20: error: incompatible type for argument 4 of 'input'
     input(x1,y1,x2,y2,x3,y3);
                    ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem02.c:11:6: note: expected 'float *' but argument is of type 'float'
 void input(float *x1,float*y1, float *x2, float*y2, float *x3, float *y3){
      ^~~~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem02.c:36:23: error: incompatible type for argument 5 of 'input'
     input(x1,y1,x2,y2,x3,y3);
                       ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem02.c:11:6: note: expected 'float *' but argument is of type 'float'
 void input(float *x1,float*y1, float *x2, float*y2, float *x3, float *y3){
      ^~~~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem02.c:36:26: error: incompatible type for argument 6 of 'input'
     input(x1,y1,x2,y2,x3,y3);
                          ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem02.c:11:6: note: expected 'float *' but argument is of type 'float'
 void input(float *x1,float*y1, float *x2, float*y2, float *x3, float *y3){
      ^~~~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem02.c:37:5: error: 'res' undeclared (first use in this function)
     res=is_triangle(x1,y1,x2,y2,x3,y3);
     ^~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem02.c:37:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation finished at 10/31/2023, 12:26:19 AM
Compilation started at 10/31/2023, 12:30:45 AM
Compilation finished at 10/31/2023, 12:30:46 AM
Compilation started at 10/31/2023, 11:13:04 AM
Compilation finished at 10/31/2023, 11:13:05 AM
Compilation started at 10/31/2023, 11:13:14 AM
Compilation finished at 10/31/2023, 11:13:15 AM
Compilation started at 10/31/2023, 11:24:57 AM
Compilation finished at 10/31/2023, 11:24:57 AM
